--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This was created by Kent Nathaniel. It uses mapbox.com and weatherstack.com data</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
